--- a/.github/workflows/xss-tools.yaml
+++ b/.github/workflows/xss-tools.yaml
@@ -14,7 +14,6 @@ on:
         type: string
 
 jobs:
-  # Job 1: Run httpx on dynamic URLs (parallel chunks)
   httpx-scan:
     runs-on: ubuntu-latest
     strategy:
@@ -28,6 +27,12 @@ jobs:
           key: combined-results-${{ inputs.run_id }}
           restore-keys: |
             combined-results-
+
+      - name: Debug combined-results/dynamic-urls.txt
+        run: |
+          echo "=== combined-results/dynamic-urls.txt ==="
+          [ -f combined-results/dynamic-urls.txt ] && head -20 combined-results/dynamic-urls.txt || echo "File not found"
+          [ -f combined-results/dynamic-urls.txt ] && wc -l combined-results/dynamic-urls.txt || true
 
       - name: Install httpx with PATH fix
         run: |
@@ -65,13 +70,19 @@ jobs:
           ALIVE_COUNT=$(wc -l < httpx-results-${{ matrix.chunk }}/httpx.txt)
           echo "Chunk ${{ matrix.chunk }} found $ALIVE_COUNT alive URLs"
 
+      - name: Debug httpx-results dir after scan
+        run: |
+          echo "httpx-results-${{ matrix.chunk }}/ content:"
+          ls -l httpx-results-${{ matrix.chunk }}/
+          echo "First lines of httpx.txt:"
+          head -20 httpx-results-${{ matrix.chunk }}/httpx.txt || true
+
       - name: Cache httpx results
         uses: actions/cache@v4
         with:
           path: httpx-results-${{ matrix.chunk }}/
           key: httpx-results-${{ matrix.chunk }}-${{ inputs.run_id }}
 
-  # Job 2: Run x8 parameter bruteforce (parallel)
   x8-scan:
     needs: httpx-scan
     runs-on: ubuntu-latest
@@ -110,6 +121,19 @@ jobs:
             httpx-results-7-${{ inputs.run_id }}
             httpx-results-8-${{ inputs.run_id }}
 
+      - name: Debug all httpx cache presence (x8-scan)
+        run: |
+          echo "==== httpx-results-* directory list ===="
+          ls -l httpx-results-*/ || true
+          for d in httpx-results-*; do echo "$d:"; head -10 $d/*.txt || true; done
+
+      - name: Debug combined-results
+        run: |
+          echo "combined-results/dynamic-urls.txt:"
+          head -10 combined-results/dynamic-urls.txt || true
+          echo "combined-results/unfurl-params.txt:"
+          head -10 combined-results/unfurl-params.txt || true
+
       - name: Install x8
         run: |
           wget https://github.com/Sh1Yo/x8/releases/latest/download/x8-linux-x86_64 -O x8 && chmod +x x8 && sudo mv x8 /usr/local/bin/ && command -v x8 && echo "x8 installed via direct download" && exit 0 || echo "Direct download failed, trying cargo..."
@@ -122,7 +146,7 @@ jobs:
             fi
           fi
           echo '#!/bin/bash' > /usr/local/bin/x8_fallback.sh
-          echo 'echo "Simulating x8 functionality: URL="$1\" WORDLIST=\"$2""' >> /usr/local/bin/x8_fallback.sh
+          echo 'echo "Simulating x8 functionality: URL="$1" WORDLIST="$2"' >> /usr/local/bin/x8_fallback.sh
           echo 'echo "Error: Fallback script executed. Real x8 not found. Please check installation."' >> /usr/local/bin/x8_fallback.sh
           chmod +x /usr/local/bin/x8_fallback.sh
           if ! command -v x8 >/dev/null 2>&1; then
@@ -137,6 +161,8 @@ jobs:
         run: |
           mkdir -p x8-results-${{ matrix.chunk }}
           find . -name "httpx-results-*" -type d -exec cat {}/*.txt \; | grep '?' | sort -u > dynamic-alive.txt || true
+          echo "=== preview dynamic-alive.txt ==="
+          head -10 dynamic-alive.txt || true
           if [[ -s "dynamic-alive.txt" ]] && [[ -s "combined-results/unfurl-params.txt" ]]; then
             TOTAL_LINES=$(wc -l < dynamic-alive.txt)
             LINES_PER_CHUNK=$((TOTAL_LINES / 4 + 1))
@@ -156,13 +182,18 @@ jobs:
             touch x8-results-${{ matrix.chunk }}/x8.txt
           fi
 
+      - name: Debug x8-results output
+        run: |
+          echo "x8-results-${{ matrix.chunk }}/ content:"
+          ls -l x8-results-${{ matrix.chunk }}/ || true
+          head -10 x8-results-${{ matrix.chunk }}/x8.txt || true
+
       - name: Cache x8 results
         uses: actions/cache@v4
         with:
           path: x8-results-${{ matrix.chunk }}/
           key: x8-results-${{ matrix.chunk }}-${{ inputs.run_id }}
 
-  # Job 3: Run kxss (parallel)
   kxss-scan:
     needs: httpx-scan
     runs-on: ubuntu-latest
@@ -201,6 +232,19 @@ jobs:
             httpx-results-7-${{ inputs.run_id }}
             httpx-results-8-${{ inputs.run_id }}
 
+      - name: Debug all httpx cache presence (kxss-scan)
+        run: |
+          echo "==== httpx-results-* directory list ===="
+          ls -l httpx-results-*/ || true
+          for d in httpx-results-*; do echo "$d:"; head -10 $d/*.txt || true; done
+
+      - name: Debug input files
+        run: |
+          echo "combined-results/dynamic-urls.txt:"
+          head -10 combined-results/dynamic-urls.txt || true
+          echo "combined-results/unfurl-params.txt:"
+          head -10 combined-results/unfurl-params.txt || true
+
       - name: Install kxss
         run: |
           go install github.com/Emoe/kxss@latest
@@ -211,6 +255,9 @@ jobs:
           mkdir -p kxss-results-${{ matrix.chunk }}
           export PATH=$PATH:$(go env GOPATH)/bin
           find . -name "httpx-results-*" -type d -exec cat {}/*.txt \; | grep '?' | sort -u > dynamic-alive.txt || true
+
+          echo "dynamic-alive.txt preview:"
+          head -10 dynamic-alive.txt || true
 
           if [[ -s "dynamic-alive.txt" ]] && [[ -s "combined-results/unfurl-params.txt" ]]; then
             TOTAL_LINES=$(wc -l < dynamic-alive.txt)
@@ -250,6 +297,12 @@ jobs:
 
           KXSS_COUNT=$(wc -l < kxss-results-${{ matrix.chunk }}/kxss-output.txt)
           echo "kxss found $KXSS_COUNT results for chunk ${{ matrix.chunk }}"
+
+      - name: Debug kxss-results output
+        run: |
+          echo "kxss-results-${{ matrix.chunk }}/ content:"
+          ls -l kxss-results-${{ matrix.chunk }}/ || true
+          head -10 kxss-results-${{ matrix.chunk }}/kxss-output.txt || true
 
       - name: Cache kxss results
         uses: actions/cache@v4
