--- a/.github/workflows/xss-tools.yaml
+++ b/.github/workflows/xss-tools.yaml
@@ -143,8 +143,7 @@ jobs:
             wc -l "$f" || echo "-"
           done
 
-      # --- FIXED & SAFE CONSOLIDATION ---
-      - name: Consolidate all httpx results (strip codes and colors, safe)
+      - name: Consolidate all httpx results (RAW, no cleaning)
         run: |
           COUNT=$(find . -type f -path './httpx-results-*/httpx.txt' | wc -l)
           echo "Discovered chunk file count: $COUNT"
@@ -153,13 +152,12 @@ jobs:
             touch consolidated-httpx-results/all-httpx.txt
           else
             find . -type f -path './httpx-results-*/httpx.txt' -exec cat {} + | \
-              sed -E 's/\x1b\[[0-9;]*m//g' | \               sed -E 's/ *\[[0-9]{3}\]$//' | \
-              sed 's/ *$//' | \
               sort -u > consolidated-httpx-results/all-httpx.txt
           fi
           echo "Preview of consolidated-httpx-results/all-httpx.txt"
           head -20 consolidated-httpx-results/all-httpx.txt || echo "No results"
-          echo "Total cleaned URLs: $(wc -l < consolidated-httpx-results/all-httpx.txt)"
+          echo "Total URLs: $(wc -l < consolidated-httpx-results/all-httpx.txt)"
+
 
       - name: Cache consolidated httpx results
         uses: actions/cache@v4
